styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* HELPER CLASSES */
.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.hidden {
  display: none;
}

.blur {
  position: absolute;
  width: 100vw;
  height: 100vh;
  z-index: 5;
  background-color: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(100px);
}

html {
  font-size: 62.5%;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: #ddd;
}

body {
  width: 100vw;
  height: 100vh;

  background: linear-gradient(180deg, #000, #555);

  flex-direction: column;
  gap: 3.6rem;
}

.title {
  font-size: 3.8rem;
}

.cash-total {
  position: absolute;
  letter-spacing: 1.4px;
  font-size: 3.2rem;
  font-weight: 500;
  top: 3.5rem;
  left: 3.5rem;
  color: #22c55e;
}

.teams-container {
  gap: 2.4rem;
}

.team {
  width: 15rem;
  height: 10rem;
  font-size: 3.2rem;
  border-radius: 12px;
  font-weight: 600;
  color: #ddd;
  border: 0;
}

.team-blue-btn {
  background-color: #3b82f6;
  transition: 0.3s all;
}

.team-blue-btn:hover {
  transform: translate(0, -0.5rem);
}

.team-red-btn {
  background-color: #ef4444;
  transition: 0.3s all;
}

.team-red-btn:hover {
  transform: translate(0, -0.5rem);
}

.bets {
  gap: 1.8rem;
}

.bets-options {
  padding: 1.6rem 2.5rem;
  font-size: 2rem;
  text-transform: uppercase;
  font-weight: 700;
  color: #fff;
  border: 0;
  border-radius: 8px;
  transition: 0.3s all;
}

.bets-options:hover {
  transform: translate(0, -0.5rem);
}

.win {
  background-color: #22c55e;
}

.lose {
  background-color: #991b1b;
}

.tie {
  background-color: #d97706;
}

/* CREATE A CLASS FOR THE SELECT ELEMENT WHERE THE SELECT ELEMENT GETS A SHADOW, AND THE NOT SELECTED ELEMENTS LOSE SOME OF HIS COLOR / BRIGHTNESS */

.bet-form {
  width: 31rem;
  height: 4.5rem;
  color: #fff;
  background-color: rgba(255, 255, 0, 0.1);
  gap: 0.3rem;
  border-radius: 10px;
  font-size: 2.2rem;
  font-weight: 600;
  letter-spacing: 1.1px;
}

.total-bet {
  width: 100%;
  text-align: center;
}

.bet-input {
  height: 100%;
  width: 100%;
  border: 0;

  text-align: center;
  color: #22c55e;
  font-size: 2.2rem;
  font-weight: 600;
  background-color: rgba(255, 255, 0, 0.1);
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

.error {
  font-size: 2.2rem;
  color: #ef4444;
}

.play {
  width: 31rem;
  border-radius: 10px;
  height: 5rem;
  font-size: 2.2rem;
  font-weight: 600;
  text-transform: uppercase;
  color: #fff;
  border: 0;
  background: linear-gradient(180deg, #f97316, #ea580c);
}

.play:active {
  background: linear-gradient(
    180deg,
    rgba(250, 116, 20, 0.5),
    rgba(233, 89, 12, 0.5)
  );
}

/* RULES ELEMENT */

.notifications {
  position: absolute;
  z-index: 10;

  height: 46rem;
  width: 32rem;
  border-radius: 20px;

  background: linear-gradient(180deg, rgb(0, 0, 0), rgb(30, 30, 30));
  box-shadow: 0px 0px 50px 5px rgba(255, 255, 255, 0.2);
}

.rules {
  gap: 1.4rem;
  flex-direction: column;
}

.rules-list {
  width: 22rem;
  font-size: 1.35rem;
  flex-direction: column;
  gap: 0.8rem;

  font-weight: 500;
  color: #bbb;
}

.possible-result {
  width: 22rem;
  font-weight: 500;
}

.luck {
  color: #fbbf24;
  font-size: 2rem;
}

.possible-win {
  color: rgb(33, 196, 93, 0.7);
}

.possible-win-high {
  font-weight: 600;
  color: rgb(33, 196, 93);
}
.possible-lose {
  color: rgb(239, 67, 67, 0.8);
}

.possible-lose-high {
  font-weight: 600;
  color: rgb(239, 67, 67);
}

.close-rules {
  position: absolute;
  right: 1.1rem;
  top: 1.1rem;
  color: #fff;
  background-color: #00000000;
  border: 0;
}

.close-rules:hover {
  cursor: pointer;
}

.results {
  gap: 2.4rem;
  flex-direction: column;
}

/* .results-title {
  text-decoration: underline;
} */

.teams-result {
  gap: 4rem;

  width: 26rem;
  height: 5rem;
  background: linear-gradient(
    180deg,
    rgba(250, 118, 23, 0.5),
    rgb(235, 90, 13)
  );
  border-radius: 10px;
}

.results-text {
  font-size: 2.2rem;
  border-radius: 10px;
}

.result-red {
  width: 100%;
  height: 100%;
  line-height: 4.75rem;
  text-align: center;
  vertical-align: middle;
  background-color: #ef4444;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.result-blue {
  width: 100%;
  height: 100%;
  line-height: 4.75rem;
  text-align: center;
  vertical-align: middle;
  background-color: #3b82f6;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.bet-result-title {
  font-weight: 600;
  color: #fff;
}

.total-bet-text {
  font-weight: 300;
  color: #22c55e;
}

.green {
  color: #22c55e;
}

.cash-text {
  color: #22c55e;
  font-weight: 300;
}

.play-again {
  width: 17.5rem;
}

